Updated surefire version. Setting heap available to surefire.