@@ -46,6 +46,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>-Xmx1g -XX:MaxPermSize=256m</argLine>
                     <systemProperties>
                         <bmp.use.littleproxy>true</bmp.use.littleproxy>
                     </systemProperties>
